css/app.css
html, body {
	background: #333 url('../images/backgrounds/ZQLogo_skyBlueCouds2.jpg') center 75% no-repeat; 
	/*background: -webkit-linear-gradient(left top, #E4E1D6 , #D16813);*/ /* For Safari 5.1 to 6.0 */
    /*background: -o-linear-gradient(bottom right, #E4E1D6, #D16813);*/ /* For Opera 11.1 to 12.0 */
    /*background: -moz-linear-gradient(bottom right, #E4E1D6, #D16813);*/ /* For Firefox 3.6 to 15 */
    /*background: linear-gradient(to bottom right, #E4E1D6 , #D16813);*/ /* Standard syntax */
   	/*background-repeat:no-repeat;*/
	-webkit-background-size:cover;
	-moz-background-size:cover;
	-o-background-size:cover;
	background-size:cover;
   /** background-color: #F4F2EB;**/
   	width: auto !important;
   	height: 100%;
  	overflow-x: hidden !important;
}

.fill { 
    min-height: 100%;
}
.navbar{
	margin-right: none;
}
.panel, .route-blurb-container {
    -webkit-box-shadow: none;
    box-shadow: none;
    background: rgba(255,255,255,0.5);
}
.table > thead > tr > th, .table > thead > tr > td {
    border: 0;
}

/**--------------CHORDS VIEW------------------**/
#altChords {
	background: transparent;
	text-decoration: none;
	border: none;
	margin-top: -10px;
}
#altChords .panel-body{
	padding: 0px;
	margin:2px;
	border: none;
}
#altChords td{
	padding: 0px;
	margin:2px;
	border-top: none;
}

#altChords a {
	border-radius: 10px 10px 0px 0px;
	display: inline-block;
	margin-right: 5px;
	min-width: 50px;
	outline: 1px;
	position: relative;
	text-decoration: none;
}

#altChords .active{
	background: #DA9223;
	color: #fff;
	border-color: #000;

}

#altChords ul{
	list-style-type: none;
	padding: 0px;
	margin: 0px;
}

#altChords li a {
	background: #F4E0CB;
	color: #CF6314;
	border-radius: 30px;
	min-width: 55px;
	max-width: 65px;
	padding: 8px;
	margin: 2px;
	text-align: center;
}

#altChords img {
 	float: left;
 	width: 100%; /*this makes the image size responsive*/
 	margin:10px;
 	/*vertical-align: center; */
}
	
#chordNav{
	vertical-align: bottom;
	margin-left: 15%;
	/*margin-right: 25%;*/
	min-width: 400px;
	padding: 5px 5px 5px 5px;
	position: relative;
}

#chordNav a{
	background: #F4E0CB;
	color: #CF6314;
	min-width: 30px;
	text-align: center;
	padding: 5px 65% 5px 65%;
	border-radius: 100px;
}

#sharpFlatNav{
	/*don't put anything in here or risk 
	overiding image size and position too*/
	margin-left: 20%;
}

#sharpFlatNav a{
	background: #F4E0CB;
	color: #CF6314;
	text-align: center;
	border-radius: 30px;
	float: center;
	
}

#sharpFlatNav span{
	float: left;
}



/**--------------PROGRESSION VIEW------------------**/
#progChords {
	background: transparent;
	text-decoration: none;
	border: none;
	margin-top: -10px;
}

#progChords .panel-body{
	padding: 0px;
	margin:2px;
	border: none;
}

#progChords td{
	padding: 0px;
	margin:2px;
	border-top: none;
}

#progChords a {
	border-radius: 10px 10px 0px 0px;
	display: inline-block;
	margin-right: 5px;
	min-width: 45px;
	outline: none;
	position: relative;
	text-decoration: none;
}

#progChords .active{
	background: #DA9223;
	color: #fff;	
}

#progChords ul{
	list-style-type: none;
	padding: 0px;
	margin: 0px;
}

#progChords li a {
	background: #F4E0CB;
	color: #CF6314;
	border-radius: 30px;
	min-width: 65px;
	max-width: 65px;
	padding: 5px;
	margin: 4px;
	text-align: center;
	position: relative;
}
#progChords img {
 	width: 47%; /*this makes the image size responsive*/
 	margin:2px;
 	
 	/*vertical-align: center;
 	position: relative;*/
}
.progressionChord img {
	float: left;
	height: 25%;
	width: 25%;
	position: relative;
}

#progTitle{
	color: #fff;
	font-size: 20px;
	font-family: 'Verdana', Sans;
	font-weight: strong;
	vertical-align: bottom;
	margin-left:7%;
	/*margin-right: 25%;*/
	/*min-width: 350px;*/
	padding: 5px 5px 5px 5px;
	position: relative;
}


#progNav{
	vertical-align: bottom;
	margin-left: 15%;
	margin-top: -2%;
	/*margin-right: 25%;*/
	min-width: 400px;
	padding: 5px 5px 5px 5px;
	position: relative;
}


#progNav a{
	background: #F4E0CB;
	color: #CF6314;
	min-width: 30px;
	text-align: center;
	padding: 5px 65% 5px 65%;
	border-radius: 100px;
}

/**--------------IMPROV PATTERN VIEW------------------**/
#patternChords {
	background: transparent;
	text-decoration: none;
	border: none;
	margin-top: -10px;
}

#patternChords .panel-body{
	padding: 0px;
	margin:2px;
	border: none;
}

#patternChords td{
	padding: 0px;
	margin:2px;
	border-top: none;
}

#patternChords a {
	border-radius: 10px 10px 0px 0px;
	display: inline-block;
	margin-right: 5px;
	min-width: 50px;
	outline: 1px;
	position: relative;
	text-decoration: none;
}

#patternChords .active{
	background: #DA9223;
	color: #fff;	
}

#patternChords ul{
	list-style-type: none;
	padding: 0px;
	margin: 0px;
}

#patternChords li a {
	background: #F4E0CB;
	color: #CF6314;
	border-radius: 30px;
	min-width: 45px;
	max-width: 65px;
	padding: 8px;
	margin: 2px;
	text-align: center;
	position: relative;
}
#patternChords img {
 	width: 100%; /*this makes the image size responsive*/
 	margin:10px 10px 0px 10px;
 	/*vertical-align: center; */
 	/*position: relative;*/
}

#patternTitle{
	color: #fff;
	font-size: 20px;
	font-family: 'Verdana', Sans;
	font-weight: strong;
	/*vertical-align: bottom;*/
	margin-left: 17%;
	/*margin-right: 25%;*/
	/*min-width: 350px;*/
	padding: 5px 5px 5px 5px;
	margin-bottom: 0%;
	position: relative;
}

#patternHdr{
	color: #000;
	font-size: 20px;
	font-family: 'Verdana', Sans;
	font-weight: strong;
	padding: 5px 5px 5px 7px;
	position: relative;
}


#patternNav{
	vertical-align: bottom;
	margin-left: 15%;
	margin-top: -2%;
	/*margin-right: 25%;*/
	min-width: 400px;
	padding: 5px 5px 5px 5px;
	position: relative;
}

#patternNav a{
	background: #F4E0CB;
	color: #CF6314;
	min-width: 30px;
	text-align: center;
	padding: 5px 65% 5px 65%;
	border-radius: 100px;
}

/**--------------MAIN VIEW------------------**/
#mainView {
	
	/**
	background: url('../images/BeachShell.jpg');
	background-repeat:no-repeat;
	-webkit-background-size:cover;
	-moz-background-size:cover;
	-o-background-size:cover;
	background-size:cover;**/
	background-color: transparent;
	background-position:center;
	border: none;
	overflow: hidden;
	min-height: 100%;
}
#mainView ul{
	list-style-type: none;
	vertical-align: bottom;
	padding-top: 250%;
}
#mainView li a {
	background: #F4E0CB;
	box-shadow: 0 3px 0 rgba(0,0,0,0.1);
	color: #CF6314;
	line-height: 50px;
	border-radius: 30px;
	padding: 10px 400px 10px 10px;
	margin: 10px;
	text-align: center;
	position: relative;
	text-decoration: none;
}
#mainView .active{
	background: #DA9223;
	color: #fff;	
}
#mainView .logo{
	/**background: #DA9223;**/
	color: #fff;
	font-size: 60px;
	font-family: 'Cookie', cursive;
	font-weight: normal;
	line-height: 10px;
	text-shadow: 0 3px 0 rgba(0,0,0,0.1);
	border-radius: 30px;
	padding: 10px 50px 20px 30px;
	margin: 0px 0px 0px 40px;
	text-align: center;
	position: relative;
	top: 70px;
	text-decoration: none;	
}
#mainView .tagline{
	color: #fff;
	font-size: 1.2em;
	font-family:Verdana;
	font-weight: normal;
	text-shadow: 0 3px 0 rgba(0,0,0,0.1);
	padding: 1px 1px 1px 1px;
	margin: 0px 0px 10px 20px;
	min-width:200px;
	text-align: left;
	position: relative;
		
}

/**--------------TIP VIEW------------------**/

#tips .panel-heading{
	background-color: #DA9223;
	border-color: #DA9223;
}
#tips .panel, .panel-primary, .route-blurb-container {
	border-color: #DA9223;

}
#tips .btn-primary{
	background-color: #DA9223;
	border-color: #DA9223;
	margin: 0px 0px 0px 0px;
}

#tips .btn-primary-nextBack{
	background-color: #DA9223;
	border-color: #DA9223;
	margin: -20px 0px 10px 0px;
	color: #fff;
}

#tips .row{
	padding: 10px;
	margin: 0px 0px 0px 0px;
}

#tips img{
	float: right;
	width:50%; 
	margin: 10px;
	padding: 0px;
	max-width: 200px;
}

#tipTitle {
	color: #fff;
	font-size: 30px;
	font-family: 'Verdana', Sans;
	font-weight: bold;
	line-height: 40px;
	/*float: right; */
	text-align: center;
	padding: 0px;
	margin:5px;
}

#tipText {
	font-size: Medium;
	color: #222;
	float: left;
	text-align: left;
	margin:5px 5px 0px 5px;
}

/**--------------THEMES VIEW------------------**/
#themes .panel-heading{
	background-color: #DA9223;
	border-color: #DA9223;
}
#themes .thumbnail{
    border-color: #DA9223;
    background: rgba(000,000,000);
    background: rgba(000,000,000,0.3);
}

#themes .caption{
    color: #000;
    border-color: #DA9223;
    background-color: transparent;
    margin: -15px;

}

#themes .btn-primary{
	background-color: #DA9223;
	border-color: #DA9223;
}

#themes .btn-primary-nextBack{
	background-color: #DA9223;
	border-color: #DA9223;
	margin: -20px 0px 10px 0px;
	color: #fff;
}

#themes .btn-default{
	background-color: #222;
	border-color: #fff;
	margin: 0px;
	color: #fff;	
}

#themes img{
	width:50%; 
	margin: 10px;
	padding: 0px;
	max-width: 200px;
	border: 2px;
	border-color: #000;
}

#themeTitle {
	color: #fff;
	font-size: 30px;
	font-family: 'Verdana', Sans;
	font-weight: bold;
	line-height: 40px;
	text-align: center;
	padding: 0px;
	margin:5px;
}

#themeText {
	font-size: Medium;
	color: #000;
	float: left;
	text-align: left;
	margin:5px 5px 0px 5px;
}

/*----------------------------------**/

/* currebtly superceded by tips .btn-primary above so this really has litle effect */
#NextBackBtn {
	font-size:large; 
	float: right;
	margin: 0px;
	padding: 5px;
	vertical-align: top;
	color: #333;	
}

.paddingBottom{
	padding-bottom: 100%;
}

